Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5547

(mdt_internal.h:541:mdt_object_child()) ASSERTION( o ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • Lustre 2.7.0
    • 3
    • 15469

      In mdt_getattr_name_lock() there is no guarantee that mti_object is non NULL. Although we do use HABEO_CORPUS with mdt_getattr_name(), we do not with tgt_enqueue().

      [ 1401.389871] LustreError: 8342:0:(mdt_internal.h:541:mdt_object_child()) ASSERTION( o ) failed:
      [ 1401.392336] LustreError: 8342:0:(mdt_internal.h:541:mdt_object_child()) LBUG
      [ 1401.394237] Pid: 8342, comm: mdt00_004
      [ 1401.395270]
      [ 1401.395272] Call Trace:
      [ 1401.396422]  [<ffffffffa02be8c5>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      [ 1401.398309]  [<ffffffffa02beec7>] lbug_with_loc+0x47/0xb0 [libcfs]
      [ 1401.399998]  [<ffffffffa0c5eb19>] mdt_getattr_name_lock+0x1489/0x1a60 [mdt]
      [ 1401.402274]  [<ffffffffa0694784>] ? lustre_msg_get_flags+0x34/0xb0 [ptlrpc]
      [ 1401.404326]  [<ffffffffa0697110>] ? lustre_swab_ldlm_reply+0x0/0x40 [ptlrpc]
      [ 1401.406423]  [<ffffffffa0c49506>] ? mdt_intent_fixup_resent+0x46/0x230 [mdt]
      [ 1401.408443]  [<ffffffffa0c5f612>] mdt_intent_getattr+0x292/0x470 [mdt]
      [ 1401.410211]  [<ffffffffa0c4d829>] mdt_intent_policy+0x499/0xca0 [mdt]
      [ 1401.411969]  [<ffffffffa0648372>] ldlm_lock_enqueue+0x302/0x920 [ptlrpc]
      [ 1401.413813]  [<ffffffffa06727cf>] ldlm_handle_enqueue0+0x52f/0x1360 [ptlrpc]
      [ 1401.415769]  [<ffffffffa06f3d92>] tgt_enqueue+0x62/0x1d0 [ptlrpc]
      [ 1401.417445]  [<ffffffffa06f461e>] tgt_request_handle+0x71e/0xb10 [ptlrpc]
      [ 1401.419313]  [<ffffffffa06a4a67>] ptlrpc_main+0xe27/0x1980 [ptlrpc]
      [ 1401.421055]  [<ffffffffa06a3c40>] ? ptlrpc_main+0x0/0x1980 [ptlrpc]
      [ 1401.422741]  [<ffffffff8109eab6>] kthread+0x96/0xa0
      [ 1401.424037]  [<ffffffff8100c30a>] child_rip+0xa/0x20
      [ 1401.425380]  [<ffffffff81554710>] ? _spin_unlock_irq+0x30/0x40
      [ 1401.426952]  [<ffffffff8100bb10>] ? restore_args+0x0/0x30
      [ 1401.428415]  [<ffffffff8109ea20>] ? kthread+0x0/0xa0
      [ 1401.429746]  [<ffffffff8100c300>] ? child_rip+0x0/0x20
      [ 1401.431181]
      [ 1401.457808] Kernel panic - not syncing: LBUG
      [ 1401.458140] Pid: 8342, comm: mdt00_004 Not tainted 2.6.32-431.5.1.el6.lustre.x86_64 #1
      [ 1401.458140] Call Trace:
      [ 1401.458140]  [<ffffffff81550d7c>] ? panic+0xac/0x179
      [ 1401.458140]  [<ffffffffa02bef1b>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
      

      This was found through RPC corruption.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: