LU-5547 mdt: handle NULL parent in mdt_getattr_name_lock()

In mdt_getattr_name_lock() if the parent object (from mti_object) is
NULL then return -ENOENT rather than asserting.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I081cb54068bba7825e2a5593f293f48cb2eda874
Reviewed-on: http://review.whamcloud.com/11610
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>