lustre/mdt/mdt_handler.c
@@ -1323,7 +1323,6 @@ static int mdt_getattr_name_lock(struct mdt_thread_info *info,
         struct mdt_body        *reqbody   = NULL;
         struct mdt_object      *parent    = info->mti_object;
         struct mdt_object      *child;
-        struct md_object       *next      = mdt_object_child(parent);
         struct lu_fid          *child_fid = &info->mti_tmp_fid1;
         struct lu_name         *lname     = NULL;
         struct mdt_lock_handle *lhp       = NULL;
@@ -1338,7 +1337,8 @@ static int mdt_getattr_name_lock(struct mdt_thread_info *info,
 	LASSERT(ergo(is_resent,
 		     lustre_msg_get_flags(req->rq_reqmsg) & MSG_RESENT));
 
-	LASSERT(parent != NULL);
+	if (parent == NULL)
+		RETURN(-ENOENT);
 
 	if (info->mti_cross_ref) {
 		/* Only getattr on the child. Parent is on another node. */
@@ -1447,8 +1447,8 @@ static int mdt_getattr_name_lock(struct mdt_thread_info *info,
 
                 /* step 2: lookup child's fid by name */
                 fid_zero(child_fid);
-                rc = mdo_lookup(info->mti_env, next, lname, child_fid,
-                                &info->mti_spec);
+		rc = mdo_lookup(info->mti_env, mdt_object_child(parent), lname,
+				child_fid, &info->mti_spec);
 		if (rc == -ENOENT)
 			mdt_set_disposition(info, ldlm_rep, DISP_LOOKUP_NEG);
 
